[project]
name = "vault-tools"
version = "1.0.0"
description = "CLI tools for working with Veeva Vault"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "prettytable",
    "python-dotenv",
]

[project.scripts]
vault-log-analyzer = "vault_tools.log_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vault_tools"]
