[project]
name = "vault-tools"
version = "1.1.2"
description = "CLI tools for working with Veeva Vault"
requires-python = ">=3.11,<3.14"
dependencies = [
    "requests",
    "prettytable",
    "python-dotenv",
    "vault-direct-data-api-accelerators @ git+https://github.com/veeva/Vault-Direct-Data-API-Accelerators.git",
]

[project.scripts]
vault-log-analyzer = "vault_tools.log_analyzer:main"
vault-ddapi = "vault_tools.ddapi_local.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vault_tools"]

[tool.hatch.metadata]
allow-direct-references = true
