[project]
name = "vault-log-analyzer"
version = "1.0.0"
description = "CLI tool to pull and analyze API logs from Veeva Vault"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "prettytable",
    "python-dotenv",
]

[project.scripts]
vault-log-analyzer = "vault_log_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include only the single-file module — no subpackage needed
packages = []
include = ["vault_log_analyzer.py"]
